--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,183 @@
+@font-face {
+	font-family: 'Reactor7';
+	src: url('../media/fonts/reactor7/Reactor7.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
+
 body{
-    background-image: linear-gradient(to bottom, #003366, #006699, #0099cc, #003333, #000000);
+    background-image: linear-gradient(162deg, rgba(9,9,121,1) 50%, rgba(2,0,36,1) 100%, rgba(0,0,0,0) 100%); 
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 100vh;
+    margin: 0;
+    font-family: "Reactor7";
+    color: white;
+    text-align: center;
+}
+
+h1{
+    font-size: 3em;
+    line-height: 0.75em;
+    border: solid rgb(208, 208, 208) 7px;
+    border-radius: 10px;
+    margin-top: 0;
+    margin-bottom: 2px;
+    padding: 20px;
+}
+
+.container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: space-between;
+    border-radius: 10px;
+    border: solid rgb(208, 208, 208) 5px;
+    padding: 20px;
+}
+
+.character{
+    border: solid white 2px;
+    border-radius: 5px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    font-size: 1.7em;
+    padding: 10px;
+    margin: 20px;
+    background-color: rgb(0, 0, 0, 0.5);
+}
+
+.character-head{
+    margin: 10px;
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+    grid-column: 1;
+}
+.portrait{
+    width: 100%;
+    min-width: 100px;
+    margin-bottom: -20px;
+    background-color: white;
+}
+.character-head p{
+    margin-top: 20px;
+    margin-bottom: 0;
+}
+
+.stats{
+
+}
+
+.lv-radios{
+    display: flex;
+    grid-column: 1/3;
+    justify-content: center;
+    gap: 15px;
+}
+input[type="radio"] {
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border: 3px solid rgb(115, 112, 112);
+    border-radius: 50%;
+    outline: none;
+    background-color: rgb(0, 0, 0);
+    background-image: radial-gradient(circle, rgb(58, 57, 57) 25%, transparent 25%);;
+    background-size: 100%;
+    cursor: pointer;
+}
+input[type="radio"]:checked {
+    background-color: rgb(18, 212, 21); /* Change the background color when checked */
+    background-image: none
+}
+
+.limit{
+    border: solid white 1px; 
+}
+
+.used{
+    margin-top: -20px;
+    margin-bottom: 10px;
+}
+
+.button-container{
+    display: flex;
+    justify-content: space-around;
+}
+button{
+    background-color: rgb(7, 7, 130);
+    color: white;
+    border-radius: 10px;
+    text-align: center;
+    width: 20%;
+    height: 50px;
+    font-size: 1.5em;
+    cursor: pointer;
+    font-family: Arial, Helvetica, sans-serif;
+}
+button:hover{
+    background-color: blue;
+}
+
+.kills-container{
+    grid-column: 1/3;
+}
+
+.kill-info{
+    display: flex;
+    justify-content: space-between;
+    margin-top: -40px;
+    margin-bottom: -20px;
+}
+
+
+
+legend{
+    color: rgb(223, 10, 223);
+}
+
+.disabled{
+    color: rgb(80, 80, 80);
+}
+
+
+
+@media only screen and (max-width: 1200px) {
+
+    .container{
+        grid-template-columns: 1fr;
+    }
+
+    .limit{
+        height: 300px;
+    }
+
+    .used{
+        margin: 50px;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+
+    .character{
+        margin: auto
+    }
+
+    .limit{
+        margin-top: 30px;
+        width: 272px;
+        margin-left: -118px;
+        margin-bottom: 5x;
+        height: auto;
+    }
+
+    .used{
+        margin: 0px;
+    }
+    
+    button{
+        width: 100%;
+        margin: 20px;
+    }
 }
