--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -135,6 +135,7 @@ button:hover{
 
 legend{
     color: rgb(223, 10, 223);
+    margin-bottom: 5px;
 }
 
 .disabled{
@@ -146,11 +147,7 @@ legend{
 @media only screen and (max-width: 1200px) {
 
     .container{
-        grid-template-columns: 1fr;
-    }
-
-    .limit{
-        height: 300px;
+        grid-template-columns: 1fr 1fr;
     }
 
     .used{
@@ -158,16 +155,26 @@ legend{
     }
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 700px) {
+
+    .container{
+        grid-template-columns: 1fr;
+    }
+
+    .portrait{
+        min-width: 50px;
+        max-width: 100px;
+    }
+
 
     .character{
-        margin: auto
+        margin: auto;
+        margin-bottom: 20px;
     }
 
     .limit{
-        margin-top: 30px;
-        width: 272px;
-        margin-left: -118px;
+        margin-top: 35px;
+        margin-left: -110px;
         margin-bottom: 5x;
         height: auto;
     }
